apps/base/crafty/crafty-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty-bedrock-lb
  namespace: crafty
spec:
  type: LoadBalancer
  ports:
    - name: bedrock
      port: 19132
      targetPort: 19132
      protocol: UDP
  selector:
    app.kubernetes.io/component: crafty
    app.kubernetes.io/instance: crafty
    app.kubernetes.io/name: crafty
